# unnamed-game

./: .editorconfig  .gitignore  Cargo.toml  Justfile
.github/workflows/: rust.yml
assets/: main.tmx
src/: input.rs  main.rs
