[package]
name = "game"
version = "0.1.0"
authors = ["texel <texelsensei@posteo.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6.0", features = ["dynamic"] }
tego = "0.4"
glam = { version = "0.20", features = ["mint"] }

[profile.dev]
opt-level = 1
debug = true
